Fix for too large party logos in IE. Closes #449.

--- a/app/assets/stylesheets/votes.css.less
+++ b/app/assets/stylesheets/votes.css.less
@@ -69,6 +69,9 @@ article.vote {
     p:hover {
       text-decoration: underline;
     }
+    img {
+      max-width: 24px;
+    }
     .state-party {
       vertical-align: -2px;
     }
